--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,11 +12,15 @@
   <script src="lib/jasmine-3.3.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/Order.js"></script>
+  <script src="src/PersonOrder.js"></script>
+  <script src="src/TableOrder.js"></script>
+  <script src="src/Kitchen.js"></script>
+
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
-  <script src="spec/OrderSpec.js"></script>
+  <script src="spec/PersonOrderSpec.js"></script>
+
 
 </head>
 
