--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,12 +14,12 @@
   <!-- include source files here... -->
   <script src="src/PersonOrder.js"></script>
   <script src="src/TableOrder.js"></script>
-  <script src="src/Kitchen.js"></script>
 
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/PersonOrderSpec.js"></script>
+  <script src="spec/TableOrderSpec.js"></script>
 
 
 </head>
