--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,6 +12,7 @@
   <script src="lib/jasmine-3.3.0/boot.js"></script>
 
   <!-- include source files here... -->
+  <script src="src/hipsterCoffee.json"></script>
   <script src="src/PersonOrder.js"></script>
   <script src="src/TableOrder.js"></script>
 
