--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,12 +15,14 @@
   <script src="src/hipsterCoffee.json"></script>
   <script src="src/PersonOrder.js"></script>
   <script src="src/TableOrder.js"></script>
+  <script src="src/Calculator.js"></script>
 
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/PersonOrderSpec.js"></script>
   <script src="spec/TableOrderSpec.js"></script>
+  <script src="spec/CalculatorSpec.js"></script>
 
 
 </head>
