failing print test

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -23,6 +23,7 @@
   <script src="spec/PersonOrderSpec.js"></script>
   <script src="spec/TableOrderSpec.js"></script>
   <script src="spec/CalculatorSpec.js"></script>
+  <script src="spec/PrintSpec.js"></script>
 
 
 </head>
