print spec working except cash given, needs refactor

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -16,6 +16,7 @@
   <script src="src/PersonOrder.js"></script>
   <script src="src/TableOrder.js"></script>
   <script src="src/Calculator.js"></script>
+  <script src="src/Print.js"></script>
 
 
   <!-- include spec files here... -->
